<resources>
    <string name="primary_activity_name">Main Screen</string>
    <string name="app_name">Scratch Phone Card</string>
    <string name="action_settings">Settings</string>
    <string name="sample_time">Friday 25-8-1995</string>
    <string name="empty_list">Empty history</string>
    <string name="action_direct">Directs</string>
    <string name="action_stock">Stock</string>
    <string name="introduction_1">Fast phone paying by Camera</string>
    <string name="introduction_2">Share phone card directly</string>
    <string name="introduction_3">Automatically paying at promotion day</string>
    <string name="action_next">Next</string>
    <string name="description_info">Information</string>
    <string name="picture">Capture</string>
    <string name="request_camera_permission">Scratch Phone Card needs camera permission.</string>
    <string name="request_storage_permission">Scratch Phone Card needs storage permission.</string>
    <string name="intro_message">Camera sample</string>
    <string name="camera_error">Camera Error</string>
    <string name="title_activity_enter_portal_code">Sign in</string>
    <string name="forward_phone_number">Phone number</string>
    <string name="choose_provider_header">Choose provider</string>
    <string name="recharge">Recharge</string>
    <string name="promotion_information_header">Promotion information</string>
    <string name="sim_1">Sim 1</string>
    <string name="sim_2">Sim 2</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_card_code">Enter the code of the card</string>
    <string name="action_process">Recharge</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- about portal provider name -->
    <string name="viettel">Viettel</string>
    <string name="vinaphone">Vinaphone</string>
    <string name="vietnamobile">Vietnamobile</string>
    <string name="mobifone">MobiFone</string>
    <string name="done">Done</string>
    <string name="see_more">See more…</string>
    <string name="price_header">Price</string>
    <string name="refresh_action">Refresh</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


</resources>
