<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.truongngoc.scratchphonecard.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_feedback_black_48dp"
        android:title="@string/action_direct"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_direct"
        android:icon="@drawable/ic_forward_black_48dp"
        android:title="@string/action_direct"
        app:showAsAction="always" />
    <item
        android:id="@+id/stock"
        android:title="@string/action_stock"
        app:showAsAction="ifRoom"/>
</menu>
