<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_guide_background"
    tools:context=".UserGuideActivity">

    <ImageSwitcher
        android:id="@+id/image_view_user_guide"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_user_guide"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />

    <TextSwitcher
        android:id="@+id/text_view_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/introduction_2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_next_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_skip_next_black_48dp"
        android:onClick="showNextGuide"
        android:text="@string/action_next" />


</RelativeLayout>